imports/client/styles/_base.scss
html,
body,
body > div {
  //height: 100vh;
  margin: 0;
  font-size: 85%;
  font-family: "Ubuntu", Helvetica, sans-serif;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: space-around;
  height: 100vh;
}

.flex-container > div {
  margin: 10px;
  padding: 20px;
  flex: 10;
}

.flex--content {
  align-content: space-around;
  height: 100vh;
}
.banner {
  display: inline-block;
  position: relative;
}

.banner > .img-banner {
  margin-left: 6.5%;
  max-width: 87%;
  margin-bottom: 1%;
  height: auto;
  position: relative;
}

.bannerItem {
  position: absolute;
  bottom: 10%;
  right: 10%;
}

.HeaderItem {
  margin-left: 4%;
  margin-right: 4%;
}

.justification {
  text-align: justify;
}

.ui.modal {
  top: 20%;
}

